[project]
name = "oc-index"
version = "1.0.1"
description = "This software allows the production of the OpenCitations index"
readme = "README.md"
license = "ISC"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "OpenCitations", email = "tech@opencitations.net" },
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=4.9.4",
    "oc-idmanager>=0.1.1",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "rdflib>=7.6.0",
    "redis>=7.4.0",
    "regex>=2026.4.4",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "rich-argparse>=1.7.2",
    "sparqlwrapper>=2.0.0",
    "tqdm>=4.67.3",
    "zstandard>=0.25.0",
]

[project.scripts]
"oc.index.oci" = "oc_index.scripts.oci:main"
"oc.index.cnc" = "oc_index.scripts.cnc:main"
"oc.index.genSourceRDF" = "oc_index.scripts.gen_source_rdf:main"
"oc.index.meta2redis" = "oc_index.scripts.meta2redis:main"
"oc.index.cits2redis" = "oc_index.scripts.cits2redis:main"
"oc.index.dump_index" = "oc_index.scripts.dump_index:main"
"oc.index.citscount2anyid" = "oc_index.scripts.anyid_citation_count:main"
"oc.index.edit_rdf" = "oc_index.scripts.edit_rdf:main"
"oc.index.trim_crossref" = "oc_index.scripts.trim_crossref:main"
"oc.index.metadata_crossref" = "oc_index.scripts.metadata_crossref:main"
"oc.index.internet_archive" = "oc_index.scripts.internet_archive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oc_index"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "fakeredis>=2.34.1",
    "pyright>=1.1.408",
]
